`Removed CSS styles from HTML file and replaced with inline styles`

--- a/index.html
+++ b/index.html
@@ -4,78 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VCET - Vidyavardhini College of Engineering and Technology</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-image: url('VCET.jpg');
-            background-size: cover;
-            background-position: center;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            height: fit-content;
-            width: 250;
-            
-        }
-        header {
-            background-color: rgba(0, 123, 255, 0.8);
-            color: white;
-            text-align: center;
-            padding: 20px;
-        }
-        nav {
-            background-color: rgba(0, 0, 0, 0.7);
-            text-align: center;
-            padding: 10px;
-        }
-        nav a {
-            color: white;
-            margin: 0 15px;
-            text-decoration: none;
-        }
-        section {
-            padding: 50px;
-            text-align: center;
-        }
-        footer {
-            background-color: rgba(0, 123, 255, 0.8);
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
+
 </head>
-<body>
-    <header>
+<body style="font-family: Arial, sans-serif; background-image: url('VCET.jpg'); background-size: cover; background-position: center; color: #333; margin: 0; padding: 0; height: fit-content; width: 250;">
+    <header style="background-color: rgba(0, 123, 255, 0.8); color: white; text-align: center; padding: 20px;">
         <h1>Vidyavardhini College of Engineering and Technology (VCET)</h1>
         <p>Excellence in Education</p>
     </header>
-    <nav>
-        <a href="#about">About</a>
-        <a href="#courses">Courses</a>
-        <a href="#admissions">Admissions</a>
-        <a href="#contact">Contact</a>
+    <nav style="background-color: rgba(0, 0, 0, 0.7); text-align: center; padding: 10px;">
+        <a href="#about" style="color: white; margin: 0 15px; text-decoration: none;">About</a>
+        <a href="#courses" style="color: white; margin: 0 15px; text-decoration: none;">Courses</a>
+        <a href="#admissions" style="color: white; margin: 0 15px; text-decoration: none;">Admissions</a>
+        <a href="#contact" style="color: white; margin: 0 15px; text-decoration: none;">Contact</a>
     </nav>
-    <section id="about">
+    <section id="about" style="padding: 50px; text-align: center;">
         <h2>About VCET</h2>
         <p>VCET is a premier institution dedicated to providing quality education in engineering and technology.</p>
     </section>
-    <section id="courses">
+    <section id="courses" style="padding: 50px; text-align: center;">
         <h2>Our Courses</h2>
         <p>We offer a variety of undergraduate and postgraduate programs in engineering disciplines.</p>
     </section>
-    <section id="admissions">
+    <section id="admissions" style="padding: 50px; text-align: center;">
         <h2>Admissions</h2>
         <p>Apply now for the upcoming academic year. Check eligibility and deadlines.</p>
     </section>
-    <section id="contact">
+    <section id="contact" style="padding: 50px; text-align: center;">
         <h2>Contact Us</h2>
         <p>Email: info@vcet.edu | Phone: +91-123-456-7890</p>
     </section>
-    <footer>
+    <footer style="background-color: rgba(0, 123, 255, 0.8); color: white; text-align: center; padding: 10px; position: fixed; width: 100%; bottom: 0;">
         <p>&copy; 2023 VCET. All rights reserved.</p>
     </footer>
 </body>
